// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPopover children is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
>
  <button
    aria-controls="1"
    aria-expanded="false"
  />
</div>
`;

exports[`EuiPopover is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPopover euiPopover--anchorDownCenter testClass1 testClass2"
  data-test-subj="test subject string"
>
  <button
    aria-controls="0"
    aria-expanded="false"
  />
</div>
`;

exports[`EuiPopover props anchorPosition defaults to centerDown 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
>
  <button
    aria-controls="4"
    aria-expanded="false"
  />
</div>
`;

exports[`EuiPopover props anchorPosition downRight is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownRight"
>
  <button
    aria-controls="6"
    aria-expanded="false"
  />
</div>
`;

exports[`EuiPopover props anchorPosition leftCenter is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorLeftCenter"
>
  <button
    aria-controls="5"
    aria-expanded="false"
  />
</div>
`;

exports[`EuiPopover props isOpen defaults to false 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
>
  <button
    aria-controls="7"
    aria-expanded="false"
  />
</div>
`;

exports[`EuiPopover props isOpen renders true 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
>
  <button
    aria-controls="8"
    aria-expanded="true"
  />
  <div>
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--shadow euiPopover__panel"
      id="8"
    />
  </div>
</div>
`;

exports[`EuiPopover props ownFocus defaults to false 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
>
  <button
    aria-controls="9"
    aria-expanded="true"
  />
  <div>
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--shadow euiPopover__panel"
      id="9"
    />
  </div>
</div>
`;

exports[`EuiPopover props ownFocus renders true 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
>
  <button
    aria-controls="10"
    aria-expanded="true"
  />
  <div>
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--shadow euiPopover__panel"
      id="10"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`EuiPopover props panelClassName is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
>
  <button
    aria-controls="11"
    aria-expanded="true"
  />
  <div>
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--shadow euiPopover__panel test"
      id="11"
    />
  </div>
</div>
`;

exports[`EuiPopover props panelPaddingSize is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
>
  <button
    aria-controls="12"
    aria-expanded="true"
  />
  <div>
    <div
      class="euiPanel euiPanel--paddingSmall euiPanel--shadow euiPopover__panel"
      id="12"
    />
  </div>
</div>
`;

exports[`EuiPopover props withTitle is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter euiPopover--withTitle"
>
  <button
    aria-controls="2"
    aria-expanded="false"
  />
</div>
`;
